# voxelize

./: .dir-locals.el  .gitignore  Cargo.toml  README.md
src/: fragshader.glsl  geomshader.glsl  load_model.rs  main.rs  vertexshader.glsl  voxelgrid.frag  voxelgrid.vert
src/shaders/: grid.frag  grid.geom  grid.vert  gridclear.frag  gridclear.vert  mipmap.glsl  voxelgrid.frag  voxelgrid.geom  voxelgrid.vert  voxelize.frag  voxelize.geom  voxelize.vert  vxgi1.frag  vxgi1.geom  vxgi1.vert
