[package]
name = "voxelize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = {version="4.0.0", features=["reordering"]}
glium = "0.32.1"
glam = "*"
nalgebra-glm = "*"
nalgebra = "*"
itertools = "*"
image = "0.24"
egui_glium = "0.20.1"
egui = "0.20.1"